Added Auth implementation.
